packages/kotlin/ttrp-frontend/src/test/resources/negative/frg-001-unknown-tag.ttrp
container c target erp_pg """scala
val x = 1
"""
